Extended employee model

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,11 +1,8 @@
 [tryton]
-version=2.6.1dev
+version=2.6.0.1dev
 depends:
-    employees
-    account
+    company
     ir
     res
 xml:
-    attendance.xml
     employee.xml
-    payroll_record.xml
