Attendance module completed
* Updated __name__ to payroll.attendance
* Updated date to utc
* New clean __init__.py
* New clean tryton.cfg
* hr.xml deleted as it is of no use

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -1,13 +1,12 @@
 [tryton]
 version=2.6.0.1dev
 depends:
-<<<<<<< HEAD
     party
     company
+    account
     ir
     res
 xml:
     employee.xml
-    payroll_record.xml
-    hr.xml
+    payroll.xml
     attendance.xml
